--- a/StoreWeb.Data/StoreWeb.Data.csproj
+++ b/StoreWeb.Data/StoreWeb.Data.csproj
@@ -65,6 +65,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StoreWeb.Entity\StoreWeb.Entity.csproj">
+      <Project>{0DDF4DD3-E1B9-4812-BDD6-8C3184EDB32E}</Project>
+      <Name>StoreWeb.Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
